fix links misalignment issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,6 +27,7 @@ main {
 }
 
 a {
+  display: inline-flex;
   color: var(--accent-color);
 }
 
